<resources>
    <string name="app_name">Covid19</string>
    <string name="today">ในวันนี้</string>
    <string name="timeline">เส้นเวลา</string>
    <string name="cases">กรณี</string>
    <string name="sum">รวม</string>
    <string name="area">พื้นที่</string>
    <string name="update_date">วันที่อัพเดท</string>
    <string name="confirmed">ได้รับการยืนยัน</string>
    <string name="recovered">กู้คืน</string>
    <string name="hospitalized">รักษาในโรงพยาบาล</string>
    <string name="deaths">การเสียชีวิต</string>
    <string name="new_confirmed">ได้รับการยืนยันใหม่</string>
    <string name="new_recovered">กู้คืนใหม่</string>
    <string name="new_hospitalized">รักษาในโรงพยาบาลใหม่</string>
    <string name="new_deaths">การเสียชีวิตใหม่</string>
    <string name="source">แหล่ง</string>
    <string name="date">วันที่</string>
    <string name="last_data">ข้อมูลล่าสุด</string>
    <string name="confirm_date">ยืนยันวันที่</string>
    <string name="no">เลขที่</string>
    <string name="age">อายุ</string>
    <string name="gender">เพศ</string>
    <string name="gender_en">เพศ EN</string>
    <string name="nation">ประเทศชาติ</string>
    <string name="nation_en">ประเทศชาติ En</string>
    <string name="province">จังหวัด</string>
    <string name="province_id">รหัสจังหวัด</string>
    <string name="district">อำเภอ</string>
    <string name="province_en">จังหวัด En</string>
    <string name="time">เวลา</string>
    <string name="detail">รายละเอียด</string>
    <string name="location">ที่ตั้ง</string>
    <string name="recommend">แนะนำ</string>
    <string name="announce_by">ประกาศโดย</string>
    <string name="update">ปรับปรุง</string>
    <string name="person_old">เก่า</string>
    <string name="person_new">ใหม่</string>
</resources>
