<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:background="#F0F0F0"
    android:padding="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:contentPadding="8dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="10">

        <TextView
            style="@style/TextView"
            android:text="@string/confirm_date" />

        <TextView
            android:id="@+id/tv_confirm_date"
            style="@style/TextView"
            android:text="@string/confirm_date" />

        <TextView
            style="@style/TextView"
            android:text="@string/no" />

        <TextView
            android:id="@+id/tv_no"
            style="@style/TextView"
            android:text="@string/no" />

        <TextView
            style="@style/TextView"
            android:text="@string/age" />

        <TextView
            android:id="@+id/tv_age"
            style="@style/TextView"
            android:text="@string/age" />

        <TextView
            style="@style/TextView"
            android:text="@string/gender" />

        <TextView
            android:id="@+id/tv_gender"
            style="@style/TextView"
            android:text="@string/gender" />

        <TextView
            style="@style/TextView"
            android:text="@string/gender_en" />

        <TextView
            android:id="@+id/tv_gender_en"
            style="@style/TextView"
            android:text="@string/gender_en" />

        <TextView
            style="@style/TextView"
            android:text="@string/nation" />

        <TextView
            android:id="@+id/tv_nation"
            style="@style/TextView"
            android:text="@string/nation" />

        <TextView
            style="@style/TextView"
            android:text="@string/nation_en" />

        <TextView
            android:id="@+id/tv_nation_en"
            style="@style/TextView"
            android:text="@string/nation_en" />

        <TextView
            style="@style/TextView"
            android:text="@string/province" />

        <TextView
            android:id="@+id/tv_province"
            style="@style/TextView"
            android:text="@string/province" />

        <TextView
            style="@style/TextView"
            android:text="@string/province_id" />

        <TextView
            android:id="@+id/tv_province_id"
            style="@style/TextView"
            android:text="@string/province_id" />

        <TextView
            style="@style/TextView"
            android:text="@string/district" />

        <TextView
            android:id="@+id/tv_district"
            style="@style/TextView"
            android:text="@string/district" />

        <TextView
            style="@style/TextView"
            android:text="@string/province_en" />

        <TextView
            android:id="@+id/tv_province_en"
            style="@style/TextView"
            android:text="@string/province_en" />

    </GridLayout>

</androidx.cardview.widget.CardView>
