<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cases.CasesFragment">

    <GridLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            style="@style/TextView"
            android:text="@string/update_date" />

        <TextView
            android:id="@+id/tv_update_date"
            style="@style/TextView"
            android:text="@string/update_date" />

        <TextView
            style="@style/TextView"
            android:text="@string/last_data" />

        <TextView
            android:id="@+id/tv_last_data"
            style="@style/TextView"
            android:text="@string/last_data" />

        <TextView
            style="@style/TextView"
            android:text="@string/source" />

        <TextView
            android:id="@+id/tv_source"
            style="@style/TextView"
            android:text="@string/source" />
    </GridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        style="@style/RecyclerView"
        android:layout_below="@id/layout"
        tools:listitem="@layout/item_cases" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/ProgressBar" />

</RelativeLayout>
